<resources>
    <string name="app_name">Clock</string>
    <string name="hello">Hello</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="play">Play</string>
    <string name="dot">:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="init00">00</string>
    <string name="lab">Lab</string>
</resources>
