<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.fitzeng.clock.MainActivity">


    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.fitzeng.clock.TimeView
                    android:id="@+id/tabTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTime"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        />
                </org.fitzeng.clock.TimeView>

                <org.fitzeng.clock.AlarmView
                    android:id="@+id/tabAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/lvAlarmList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" >
                    </ListView>
                    <Button
                        android:id="@+id/btnAddAlarm"
                        android:textAllCaps="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_alarm"
                        />
                </org.fitzeng.clock.AlarmView>

                <org.fitzeng.clock.TimerView
                    android:id="@+id/tabTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/etHour"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:maxLines="1"
                            android:inputType="number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dot"/>
                        <EditText
                            android:id="@+id/etMin"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:maxLines="1"
                            android:inputType="number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dot"/>
                        <EditText
                            android:id="@+id/etSec"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:maxLines="1"
                            android:inputType="number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/btnGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btnStart"
                            android:text="@string/start"
                            android:textAllCaps="false"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/btnPause"
                            android:text="@string/pause"
                            android:textAllCaps="false"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/btnResume"
                            android:text="@string/resume"
                            android:textAllCaps="false"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/btnReset"
                            android:text="@string/reset"
                            android:textAllCaps="false"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </org.fitzeng.clock.TimerView>

                <org.fitzeng.clock.StopWatchView
                    android:id="@+id/tabStopWatch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        
                        <TextView
                            android:id="@+id/timeHour"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/dot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/timeMin"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/dot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/timeSec"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/dot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/timeMSec"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <ListView
                        android:id="@+id/lvWatchTimeList"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                    </ListView>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btnSWStart"
                            android:text="@string/start"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/btnSWPause"
                            android:text="@string/pause"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/btnSWResume"
                            android:text="@string/resume"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/btnSWLab"
                            android:text="@string/lab"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/btnSWReset"
                            android:text="@string/reset"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </org.fitzeng.clock.StopWatchView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</FrameLayout>
